# slashstep-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  SECURITY.md  compose.fully-managed-development.yaml  compose.fully-managed.yaml  compose.yaml  postgres-language-server.jsonc
.devcontainer/: Containerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bypass-rust-tests.yml  codeql.yml  publish-image-to-github-packages.yml  run-rust-tests-on-development-environment.yml  run-rust-tests-on-pull-request.yml  run-rust-tests-on-staging-environment.yml  run-rust-tests.yml
docs/installing/: installing-slashstep-server-with-a-binary.md  installing-slashstep-server-with-podman-desktop.md
docs/resources/webhooks/: README.md
src/: errors.rs  lib.rs  main.rs  middleware.rs  pre_definitions.rs  predefinitions.rs  resources.rs  routes.rs  tests.rs  utilities.rs
src/errors/: resource_already_exists_error.rs  resource_not_found_error.rs
src/middleware/: authentication_middleware.rs  http_request_middleware.rs  http_transaction_middleware.rs
src/queries/: create_general_types.sql
src/queries/access-policies/: insert-access-policy-row.sql
src/queries/access_policies/: create_function_can_principal_get_access_policy.sql  create_function_can_principal_get_resource.sql  create_function_get_initial_resource_id_from_access_policy.sql  create_function_get_principal_access_policies.sql  create_function_get_principal_permission_level.sql  create_function_get_scoped_resource_id_from_access_policy.sql  (+2 more)
src/resources/: access_policy.rs  access_policy.tests.rs  action.rs  app.rs  app_authorization.rs  app_authorization_credential.rs  app_credential.rs  group.rs  http_request.rs  item.rs  milestone.rs  project.rs  role.rs  server_log_entry.rs  session.rs  user.rs  workspace.rs
src/resources/app/: mod.rs  (+1 more)
src/routes/: access-policies.rs  mod.rs
src/utilities/: principal_permission_verifier.rs  resource_hierarchy.rs  reusable_route_handlers.rs  route_handler_utilities.rs  slashstepql.rs
(+450 files in other folders)
