[package]
name = "slashstep-server"
version = "0.1.0"
edition = "2024"
description = "A server for hosting a Slashstep Server instance."
readme = "README.md"
homepage = "https://slashstep.com"
repository = "https://github.com/SlashstepGroup/slashstep-server"
license = "MPL-2.0"
keywords = ["project management", "problem management", "issue tracking"]
publish = false

[dependencies]
axum = { version = "0.8.9", features = ["macros", "multipart"] }
chrono = { version = "0.4.44", features = ["serde"] }
colored = "3.1.1"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
dotenvy = "0.15.7"
local-ip-address = "0.6.12"
pg_escape = "0.1.1"
postgres = { version = "0.19.13", features = ["with-uuid-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2.13", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
tower = "0.5.3"
ntest = "0.9.5"
axum-extra = { version = "0.12.5", features = ["cookie", "erased-json"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
axum-macros = "0.5.1"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "pem", "rand_core"] }
rand = "0.10.1"
argon2 = "0.5.3"
sha2 = "0.11.0"
base64 = "0.22.1"
rust_decimal = { version = "1.41.0", features = ["rand", "db-postgres", "db-tokio-postgres"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rpassword = "7.4.0"
axum_typed_multipart = "0.16.5"
little_exif = "0.6.23"
image = "0.25.10"
infer = "0.19.0"
usvg = "0.47.0"
svg-hush = "0.9.6"

[dev-dependencies]
testcontainers = { version = "0.26.3" }
testcontainers-modules = { version = "0.14.0", features = ["postgres", "blocking"] }
axum-test = "20.0.0"
anyhow = "1.0.102"